<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp">

        <RelativeLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:background="@drawable/custom_tab_bar">

            <TextView
                android:id="@+id/current_location"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/margin3"
                android:layout_marginTop="@dimen/margin4"
                android:background="@drawable/border_white"
                android:drawablePadding="6dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin2"
                android:paddingEnd="@dimen/margin4"
                android:text="@string/logo1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size0"
                app:drawableStartCompat="@drawable/white_pin"
                tools:ignore="RtlSymmetry" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/logo_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin4"
                android:layout_toStartOf="@id/logo_text"
                android:scaleType="centerCrop"
                android:src="@drawable/logo_orange"
                app:riv_corner_radius_bottom_left="17dp"
                app:riv_corner_radius_top_left="17dp"
                tools:ignore="RtlSymmetry" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/logo_text"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin4"
                android:layout_marginEnd="@dimen/margin3"
                android:background="@drawable/custom_right_border"
                android:scaleType="centerCrop"
                android:src="@drawable/user1"
                app:riv_corner_radius="17dp" />

            <TextView
                android:id="@+id/tittle_location"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@+id/current_location"
                android:layout_marginStart="@dimen/margin3"
                android:layout_marginTop="@dimen/margin2"
                android:gravity="center_vertical"
                android:text="@string/find_residencies"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size2"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_alignWithParentIfMissing="true"
                android:keepScreenOn="true"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@+id/tittle_location"
                android:layout_marginHorizontal="@dimen/margin3"
                android:layout_marginTop="@dimen/margin2"
                android:background="@drawable/custom_edit_text_search"
                android:drawableStart="@drawable/search_icon_gray"
                android:drawablePadding="@dimen/margin2"
                android:hint="@string/description_wait_screen4"
                android:paddingStart="@dimen/margin2"
                android:textCursorDrawable="@color/blue"
                android:textSize="@dimen/text_size0" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/room_category"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="134dp"
            android:background="@drawable/border_line_white"
            android:paddingHorizontal="@dimen/margin4"
            android:paddingTop="@dimen/margin4"
            android:paddingBottom="@dimen/margin1"
            android:layout_marginHorizontal="@dimen/margin3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/room_category_recycler_view"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tittle_recommended"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin6"
            android:layout_below="@+id/top_bar"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="36dp"
            android:layout_weight="1.4"
            android:gravity="bottom"
            android:text="@string/recommended"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_all_suggest"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin6"
            android:layout_below="@+id/top_bar"
            android:layout_alignParentRight="true"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="@dimen/margin3"
            android:layout_weight="1.4"
            android:gravity="bottom|right"
            android:text="@string/view_all"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_min" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_below="@+id/tittle_recommended"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="@dimen/margin2"
            android:layout_marginEnd="1dp" />

        <TextView
            android:id="@+id/best_match"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin6"
            android:layout_below="@+id/recycler_view"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="@dimen/margin2"
            android:layout_weight="1.4"
            android:gravity="bottom"
            android:text="@string/best_match"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_all_best_match"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/recycler_view"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/margin2"
            android:layout_marginEnd="@dimen/margin3"
            android:gravity="bottom|right"
            android:text="@string/view_all"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_min" />


    </RelativeLayout>


</ScrollView>